# rust-crypto-accounting-engine

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.pnl-consumer  Dockerfile.pnl-grpc  Makefile  README.md  docker-compose.yml
.claude/: settings.json
grafana/provisioning/dashboards/: crypto-accounting.json  dashboards.yml
grafana/provisioning/datasources/: datasources.yml
k8s/: 00-namespace.yaml  01-secrets.yaml  02-postgres-init-configmap.yaml  03-postgres.yaml  04-kafka.yaml  05-ledger-service.yaml  06-pnl-consumer.yaml  07-pnl-grpc.yaml
prometheus/: prometheus.yml
scripts/: init-dbs.sql
services/ledger-service/: .env.example  Cargo.toml
services/ledger-service/benches/: portfolio.rs
services/ledger-service/migrations/: 0001_create_trades_table.sql
services/ledger-service/src/: lib.rs  main.rs
services/ledger-service/src/api/: error.rs  extractor.rs  health.rs  mod.rs  response.rs  router.rs  state.rs
services/ledger-service/src/api/handlers/: pnl.rs  portfolio.rs  trade.rs
services/ledger-service/src/application/: error.rs  mod.rs  use_case.rs
services/ledger-service/src/application/dto/: mod.rs  pnl.rs  portfolio.rs  trade.rs
services/ledger-service/src/application/services/: create_trade.rs  get_pnl.rs  get_portfolio.rs  mod.rs
services/ledger-service/src/config/: mod.rs
services/ledger-service/src/domain/: error.rs  errors.rs  mod.rs  model.rs  pnl.rs  portfolio.rs  repository.rs  trade.rs
services/ledger-service/src/infrastructure/: db.rs  mod.rs  producer.rs  repository.rs
services/pnl-consumer/: .env.example  Cargo.toml
services/pnl-consumer/migrations/: 0001_create_pnl_tables.sql
services/pnl-consumer/src/: main.rs
services/pnl-consumer/src/application/: processor.rs
services/pnl-consumer/src/config/: mod.rs
services/pnl-consumer/src/domain/: mod.rs  pnl.rs  portfolio.rs  trade_event.rs
services/pnl-consumer/src/infrastructure/: consumer.rs  db.rs  mod.rs  repository.rs
services/pnl-grpc/: Cargo.toml  build.rs
services/pnl-grpc/proto/: pnl.proto
services/pnl-grpc/src/: lib.rs  main.rs  service.rs
shared/observability/: Cargo.toml
shared/observability/src/: lib.rs
