[package]
name = "ledger-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "ledger_service"
path = "src/lib.rs"

[[bin]]
name = "ledger-service"
path = "src/main.rs"

[[bench]]
name = "portfolio"
harness = false

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.7", features = ["tracing"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["trace", "request-id", "util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono", "uuid", "rust_decimal"] }
async-trait = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

# Configuration
dotenvy = "0.15"

# Observability (shared crate: structured logs + OTel traces + Prometheus)
observability = { path = "../../shared/observability" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"

# Decimal arithmetic (no floating point)
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"

# Kafka event streaming
rdkafka = { version = "0.36", features = ["tokio"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rust_decimal_macros = "1"
