[package]
name = "pnl-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { version = "1",    features = ["full"] }
rdkafka     = { version = "0.36", features = ["tokio"] }
sqlx        = { version = "0.8",  features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal", "json"] }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
rust_decimal = { version = "1",   features = ["serde-with-str"] }
chrono      = { version = "0.4",  features = ["serde"] }
uuid        = { version = "1",    features = ["v4", "serde"] }
observability      = { path = "../../shared/observability" }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics            = "0.24"
thiserror   = "1"
anyhow      = "1"
dotenvy     = "0.15"

[dev-dependencies]
rust_decimal_macros = "1"
