[package]
name    = "observability"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry distributed tracing
opentelemetry                  = "0.27"
opentelemetry_sdk              = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp             = { version = "0.27", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry          = "0.28"

# Metrics
metrics                     = "0.24"
metrics-exporter-prometheus = { version = "0.16", features = ["http-listener"] }
